--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -124,6 +124,12 @@
           color: @successText !important;
         }
       }
+
+      .icon-doghouse {
+        background-image: url("images/doghouse.svg");
+        height: 2.5rem;
+        background-size: 100% 100%;
+      }
     }
 
     .nav > li:not(.active):not(.open):not(.current_page_parent):not(.forum):not(.topic):not(.reply) > a,
