--- a/wp-content/themes/huskies-theme/less/footer.less
+++ b/wp-content/themes/huskies-theme/less/footer.less
@@ -111,7 +111,7 @@
 }
 
 #secondFooter {
-  background-image: url("images/debut_dark.png");
+  background-image: url("@{basePath}debut_dark.png");
   min-height: 10rem;
   .box-shadow(inset 0 0 1rem 0.5rem @grayDarker);
   color: @white;
