--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -126,7 +126,7 @@
       }
 
       .icon-doghouse {
-        background-image: url("images/doghouse.svg");
+        background-image: url("@{basePath}doghouse.svg");
         height: 2.5rem;
         background-size: 100% 100%;
       }
