--- a/wp-content/themes/huskies-theme/less/style.less
+++ b/wp-content/themes/huskies-theme/less/style.less
@@ -1,22 +1,10 @@
-/*
-Theme Name: Huskies-Theme
-Theme URI: http://ultimate-huskies.de/
-Description: The theme for the ultimate huskies website
-Author: Mupat
-Author URI: 
-Version: 1.0
-
-License: GNU General Public License version 3.0
-License URI: http://www.gnu.org/licenses/gpl-3.0
-
-Tags:
-*/
 @import "../bootstrap/less/bootstrap.less";
 @import "../bootstrap/less/responsive.less";
 @import "../fontAwesome/less/font-awesome.less";
 
-@FontAwesomePath:  "fontAwesome/font";
-@baseBackground:   "images/whitey.png";
+@FontAwesomePath:  "./../fontAwesome/font";
+@basePath:         "./../images/";
+@baseBackground:   "@{basePath}whitey.png";
 
 html {
   font-size: 62.5%; /* Sets up the base 10 stuff */
@@ -37,7 +25,7 @@ body {
 @import "login.less";
 @import "bbpress.less";
 
-@import "./less/photobox.css";
+//"./less/photobox.css";
 #pbOverlay .prevNext { .opacity(50); }
 #pbOverlay.on #pbNextBtn b {
   right: 5%;
@@ -49,14 +37,14 @@ body {
   .rotate(180deg);
 }
 
-@import "./less/select2.css";
-.select2-container .select2-choice abbr { background-image: url("images/select2.png"); }
-.select2-container .select2-choice div b { background-image: url("images/select2.png"); }
-.select2-search input { background-image: url("images/select2.png"); }
-.select2-search input.select2-active { background-image: url("images/spinner.gif"); }
-.select2-more-results.select2-active { background-image: url("images/spinner.gif"); }
-.select2-container-multi .select2-choices .select2-search-field input.select2-active { background-image: url("images/spinner.gif"); }
-.select2-search-choice-close { background-image: url("images/select2.png"); }
+//"./less/select2.css";
+.select2-container .select2-choice abbr { background-image: url("./../images/select2.png"); }
+.select2-container .select2-choice div b { background-image: url("./../images/select2.png"); }
+.select2-search input { background-image: url("./../images/select2.png"); }
+.select2-search input.select2-active { background-image: url("./../images/spinner.gif"); }
+.select2-more-results.select2-active { background-image: url("./../images/spinner.gif"); }
+.select2-container-multi .select2-choices .select2-search-field input.select2-active { background-image: url("./../images/spinner.gif"); }
+.select2-search-choice-close { background-image: url("./../images/select2.png"); }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5) { 
-  .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice div b { background-image: url("images/select2x2.png"); }
+  .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice div b { background-image: url("./../images/select2x2.png"); }
 }
