fixed some styling in forum and check if caption is not empty

--- a/wp-content/themes/huskies-theme/less/bbpress.less
+++ b/wp-content/themes/huskies-theme/less/bbpress.less
@@ -133,7 +133,7 @@
       .media {
         .border-radius(0.5rem);
         padding: 1rem 0.5rem;
-        &.odd { background-color: @grayLighter; }
+        &.odd { background-color: #f9f9f9; }
 
         .meta {
           margin-right: 2rem; 
