--- a/wp-content/themes/huskies-theme/less/statics.less
+++ b/wp-content/themes/huskies-theme/less/statics.less
@@ -123,7 +123,14 @@ hr.fancy {
   img {
     width: 100%;
     max-width: 100%;
-    height: 50rem;
-    @media (max-width: 767px) { height: 25rem; }
+    height: 60rem;
+    @media (max-width: 767px) { height: 30rem; }
   }
+}
+
+blockquote {
+  .well;
+  .well-small;
+  margin-left: 1.5rem;
+  background-color: @grayLighter;
 }
