fixed disc styling on login/register/lost password page

--- a/wp-content/themes/huskies-theme/less/login.less
+++ b/wp-content/themes/huskies-theme/less/login.less
@@ -37,7 +37,7 @@ body.login {
     form {
       &:before {
         content: "";
-        background-image: url("images/disc.png");
+        background-image: url("@{basePath}disc.png");
         background-repeat: no-repeat;
         position: absolute;
         width: 127px;
