--- a/wp-content/themes/huskies-theme/less/bbpress.less
+++ b/wp-content/themes/huskies-theme/less/bbpress.less
@@ -17,6 +17,53 @@
 
   table {
     tr {
+      &.status-closed {
+        .opacity(50);
+
+        &:hover {
+          .opacity(100);
+
+          > td:first-child > h4:after,
+          > td:first-child > h4:before { opacity: 0.5; }
+        }
+        
+        > td:first-child > h4 {
+          position: relative;
+          z-index: 50;
+          .transition(all 1s ease);
+
+          &:before {
+            text-decoration: inherit;
+            display: inline-block;
+            speak: none;
+            font-family: FontAwesome;
+            content: "\f023";
+            color: @orange;
+            font-size: 3rem;
+            right: 0;
+            opacity: 0.25;
+            position: absolute;
+            bottom: -25%;
+            .transition(all 1s ease);
+          }
+
+          @media (min-width: 768px) {
+            &:after {
+              content: "geschlossen";
+              color: #aaa;
+              font-family: "Lobster",Georgia,"Times New Roman",Times,serif;
+              font-size: 3rem;
+              opacity: 0;
+              position: absolute;
+              right: 4%;
+              bottom: 0;
+              z-index: 25;
+              letter-spacing: 0.25rem;
+              .transition(all 1s ease);
+            }
+          }
+        }
+      }
       &.bbppu-unread {
         &:hover > td:first-child > h4:after,
         &:hover > td:first-child > h4:before { opacity: 0.5; }
