fixed style for long inline pagination

--- a/wp-content/themes/huskies-theme/less/bbpress.less
+++ b/wp-content/themes/huskies-theme/less/bbpress.less
@@ -129,7 +129,8 @@
 
            .topic-started-in { margin-left: -1.5rem; }
 
-          .pagination a { padding: 0rem 0.8rem; }
+          .pagination a,
+          .pagination span { padding: 0rem 0.8rem; }
         }
       }
     }
