--- a/wp-content/themes/huskies-theme/less/statics.less
+++ b/wp-content/themes/huskies-theme/less/statics.less
@@ -123,8 +123,8 @@ hr.fancy {
   img {
     width: 100%;
     max-width: 100%;
-    height: 60rem;
-    @media (max-width: 767px) { height: 30rem; }
+    // height: 60rem;
+    // @media (max-width: 767px) { height: 30rem; }
   }
 }
 
