added styling/structure for edit signature in profile edit form

--- a/wp-content/themes/huskies-theme/less/bbpress.less
+++ b/wp-content/themes/huskies-theme/less/bbpress.less
@@ -299,7 +299,7 @@
 
               .d4p-bbt-quote-link { 
                 .label; 
-                background-color: @gray;
+                background-color: @grayLight;
               }
 
               @media (max-width: 767px) { 
