fixed hover styling for home button

--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -130,7 +130,7 @@
         }
 
         &:hover {
-          background-color: white !important;
+          background-color: transparent !important;
           color: @successText !important;
         }
       }
