updated form handling after plugin update and add more consistence style for form options

--- a/wp-content/themes/huskies-theme/less/bbpress.less
+++ b/wp-content/themes/huskies-theme/less/bbpress.less
@@ -571,6 +571,12 @@
   .topic-meta-input {
     margin-bottom: 2rem;
 
+    .page-header {
+      margin-bottom: 1rem;
+      margin-top: 0;
+      h4 { margin: 0; }
+    }
+
     > div { margin-top: 2rem; }
 
     .topic-tags  input {
@@ -593,12 +599,11 @@
       @media (min-width: 768px) and (max-width: 1200px) { width: 66%; }
     }
 
+
+
     .bbp-attachments-upload-form {
       .page-header {
-        margin-bottom: 1rem;
-        margin-top: 0;
         h4 {
-          margin: 0;
           small {
             font-size: 2rem;
             .transition(color 0.5s linear);
