--- a/wp-content/themes/huskies-theme/less/plugins.less
+++ b/wp-content/themes/huskies-theme/less/plugins.less
@@ -215,3 +215,18 @@
     }
   }
 }
+
+.video-js {
+  .img-rounded;
+  .img-polaroid;
+  height: auto !important;
+  width: 96.5%!important;
+  margin: 0 auto;
+
+  video { position: relative !important; }
+  img {
+    position: absolute !important;
+    left: 0.5rem;
+    height: 98%;
+  }
+}
