--- a/wp-content/themes/huskies-theme/less/footer.less
+++ b/wp-content/themes/huskies-theme/less/footer.less
@@ -28,6 +28,25 @@
 }
 
 #secondFooter {
+  background-image: url("@{basePath}debut_dark.png");
+  min-height: 10rem;
+  .box-shadow(inset 0 0 1rem 0.5rem @grayDarker);
+  color: @white;
+  padding-top: 0.5rem;
+  position: relative;
+
+  fieldset {
+    legend {
+      text-align: center;
+      color: @grayLight;
+      text-shadow: @black 0 0.1rem 0;
+      font-family: @serifFontFamily;
+      border: none;
+      .border-radius(1rem);
+      .box-shadow(0rem 0.6rem 0.8rem -0.8rem @black);
+    }
+  }
+
   #user_info {
     z-index: 500;
     text-align: center;
@@ -75,9 +94,20 @@
     }
   }
 
+  #link-members {
+    margin-top: 1.5rem;
+    text-align: center;
+
+    a {
+      .opacity(50);
+
+      &:hover { .opacity(100); }
+    }
+  }
+
   .follow {
     text-align: center;
-    margin-top: 5rem;
+    margin-top: 3rem;
 
     h3 {
       color: @grayLight;
@@ -144,26 +174,5 @@
   &:hover {
     .opacity(75);
     color: @white;
-  }
-}
-
-#secondFooter {
-  background-image: url("@{basePath}debut_dark.png");
-  min-height: 10rem;
-  .box-shadow(inset 0 0 1rem 0.5rem @grayDarker);
-  color: @white;
-  padding-top: 0.5rem;
-  position: relative;
-
-  fieldset {
-    legend {
-      text-align: center;
-      color: @grayLight;
-      text-shadow: @black 0 0.1rem 0;
-      font-family: @serifFontFamily;
-      border: none;
-      .border-radius(1rem);
-      .box-shadow(0rem 0.6rem 0.8rem -0.8rem @black);
-    }
   }
 }
