fix input style

--- a/wp-content/themes/huskies-theme/less/style.less
+++ b/wp-content/themes/huskies-theme/less/style.less
@@ -15,6 +15,25 @@ body {
   // position: relative;
 }
 
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] { height: auto; }
+
+#post-toolbar { margin-bottom: 1rem; }
+
 @import "statics.less";
 @import "header.less";
 @import "content.less";
