updated submodules and some minor style changes

--- a/wp-content/themes/huskies-theme/less/style.less
+++ b/wp-content/themes/huskies-theme/less/style.less
@@ -33,6 +33,7 @@ input[type="tel"],
 input[type="color"] { height: auto; }
 
 #post-toolbar { margin-bottom: 1rem; }
+#wpadminbar { z-index: 5000; }
 
 @import "statics.less";
 @import "header.less";
