--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -160,10 +160,7 @@
               bottom: 0.4rem;
             }
 
-            img {
-              width: 100%;
-              height: 100%;
-            }
+            img { width: 100%; }
           }
         }
 
