--- a/wp-content/themes/huskies-theme/less/bbpress.less
+++ b/wp-content/themes/huskies-theme/less/bbpress.less
@@ -127,6 +127,8 @@
       td {
         position: relative; 
 
+        &:nth-child(1) {padding: 10px 8px 20px; }
+
         &:nth-child(2),
         &:nth-child(3),
         &:last-child {
@@ -172,6 +174,7 @@
     }
 
     ul {
+      box-shadow: none;
       @media (max-width: 767px) { width: 105%; }
     }
   }
@@ -748,4 +751,10 @@ table .status-spam {
 .topic-replies-wrapper .status-spam:before,
 table .status-spam td:first-child h4:before {
   content: "Spam";
+}
+
+.bbppu-mark-as-read {
+  float: none;
+  text-align: right;
+  width: 100%;
 }
