--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -106,6 +106,21 @@
         border: none;
         box-shadow: none;
       }
+
+      .menu-item {
+        position: relative;
+        .badge {
+          position: absolute;
+          top: -0.5rem;
+          right: -1rem;
+          box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.5);
+
+          @media (max-width: 767px) { 
+            top: 0.65rem;
+            right: 1rem;
+          }
+        }
+      }
     }
 
     .caret { 
