add styling for blockquote and share plugin

--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -58,6 +58,7 @@
           width: 90%;
           word-wrap: break-word;
 
+          .article_meta_edit_link { float: right; }
           > a {
             word-wrap: break-word;
             color: @textColor;
@@ -188,5 +189,12 @@
       text-align: center;
       input[type="password"] { margin-right: 0.5rem; }
     }
+  }
+
+  .alignleft { float: left; }
+  .alignright { float: right; }
+  .clear { 
+    clear: both; 
+    padding-top: 5rem;
   }
 }
