--- a/wp-content/themes/huskies-theme/less/plugins.less
+++ b/wp-content/themes/huskies-theme/less/plugins.less
@@ -277,3 +277,18 @@
     }
   }
 }
+
+
+.quickshare-container {
+  margin: 3rem 0;
+  text-align: center;
+
+  .quickshare-icons li, 
+  .quickshare-genericons li, 
+  .quickshare-text li {
+    float: none;
+    display: inline-block;
+  }
+
+  .quickshare-genericons span { float: none; }
+}
