add first styling for start page

--- a/web/app/themes/huskies-theme/styles/index.less
+++ b/web/app/themes/huskies-theme/styles/index.less
@@ -1,4 +1,50 @@
-html, body, ul {
+@charset "UTF-8";
+
+@import "_variables";
+@import "_fonts";
+@import "_typography";
+@import "_buttons";
+
+html, body, ul, h1, h2 {
   margin: 0;
   padding: 0;
 }
+
+html, body {
+  font-family: @f-normal;
+  font-weight: @fw-normal;
+  color: @c-black
+}
+
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
+}
+
+.clear {
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+
+  &:after {
+    clear: both;
+  }
+}
+
+.icon(@color: @c-white) {
+  cursor: pointer;
+  color: @color;
+  &:hover {
+    color: darken(@color, 10%);
+  }
+}
+
+@import "section";
+@import "header";
+@import "slideshow";
+@import "post_short";
