--- a/web/app/themes/huskies-theme/views/layout/header.twig
+++ b/web/app/themes/huskies-theme/views/layout/header.twig
@@ -1,1 +1,8 @@
-{# here goes the menu #}
+<nav class="header">
+  <div class="header__mobile clear">
+    <span class="icon-menu pull-left"></span>
+    <span class="icon-paw pull-right"></span>
+  </div>
+</nav>
+
+<img class="logo" src="{{ site.theme.uri }}/images/logo.svg" alt="Logo" />
