--- a/web/app/themes/huskies-theme/views/layout/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/base.twig
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]><html class="no-js ie ie6 lt-ie9 lt-ie8 lt-ie7" {{site.language_attributes}}> <![endif]-->
-<!--[if IE 7]><html class="no-js ie ie7 lt-ie9 lt-ie8" {{site.language_attributes}}> <![endif]-->
-<!--[if IE 8]><html class="no-js ie ie8 lt-ie9" {{site.language_attributes}}> <![endif]-->
-<html class="no-js" {{site.language_attributes}}>
+<!--[if lt IE 7]><html class="no-js ie ie6 lt-ie9 lt-ie8 lt-ie7" {{ site.language_attributes }}> <![endif]-->
+<!--[if IE 7]><html class="no-js ie ie7 lt-ie9 lt-ie8" {{ site.language_attributes }}> <![endif]-->
+<!--[if IE 8]><html class="no-js ie ie8 lt-ie9" {{ site.language_attributes }}> <![endif]-->
+<html class="no-js" {{ site.language_attributes }}>
   <head>
+    <meta charset="{{ site.charset }}">
     <meta name="description" content="{{ site.description }}">
     <meta name="robots" content="index,follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -23,7 +24,7 @@
 
     {{ function('wp_head') }}
   </head>
-  <body>
+  <body class="{{ body_class }}">
     <header>
       {% block header %}{% endblock %}
       {% include 'layout/header.twig' %}
