add footer layout/styling

--- a/web/app/themes/huskies-theme/styles/index.less
+++ b/web/app/themes/huskies-theme/styles/index.less
@@ -13,7 +13,8 @@ html, body, ul, h1, h2 {
 html, body {
   font-family: @f-normal;
   font-weight: @fw-normal;
-  color: @c-black
+  color: @c-black;
+  font-size: 75%;
 }
 
 .pull-left {
@@ -48,3 +49,4 @@ html, body {
 @import "header";
 @import "slideshow";
 @import "post_short";
+@import "footer";
